--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -12,7 +12,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="2.6"
         app:cardBackgroundColor="@android:color/background_light"
         app:cardCornerRadius="2dp"
         app:cardMaxElevation="4dp">
@@ -67,7 +67,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="8dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="5"
         app:cardBackgroundColor="@android:color/background_light"
         app:cardCornerRadius="2dp"
@@ -97,6 +100,7 @@
                     android:layout_height="match_parent"
                     android:hint="College Name"
                     android:maxLines="4"
+                    android:scrollbars="vertical"
                     android:textColor="@color/Asphalt_grey"
                     android:textSize="@dimen/edit_text_size" />
             </android.support.design.widget.TextInputLayout>
@@ -129,7 +133,41 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/card_view_content_margin"
+                android:layout_marginEnd="@dimen/card_view_content_margin"
+                android:layout_marginStart="@dimen/card_view_content_margin"
+                android:layout_marginTop="4dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_weight="1"
+                    android:paddingEnd="4dp"
+                    android:paddingStart="4dp"
+                    android:text="Year"
+                    android:textAlignment="textStart"
+                    android:textAppearance="@style/TextAppearance.FontPath.Regular"
+                    android:textColor="@color/Asphalt_grey" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_weight="2"
+                    android:paddingEnd="4dp"
+                    android:paddingStart="4dp"
+                    android:text="Course"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/Asphalt_grey" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/card_view_content_margin"
+                android:layout_marginEnd="@dimen/card_view_content_margin"
+                android:layout_marginStart="@dimen/card_view_content_margin"
                 android:orientation="horizontal"
                 android:padding="@dimen/card_view_content_padding">
 
@@ -144,7 +182,6 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="2" />
-
             </LinearLayout>
         </LinearLayout>
 
@@ -154,7 +191,10 @@
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginStart="4dp"
         android:layout_weight="0.8"
+        android:elevation="4dp"
         android:paddingEnd="8dp"
         android:paddingStart="8dp"
         android:text="Next"
